--- a/Ansible/roles/docker/tasks/main.yml
+++ b/Ansible/roles/docker/tasks/main.yml
@@ -11,7 +11,7 @@
     force_source: true
 - name: docker container
   docker_container:
-    name: my_app_chourabi_container
+    name: myapp-chaib-container
     image: devops:latest
     state: started
     recreate: true
